@@ -1,0 +1,12 @@
+//
+// Gtk.Label.custom
+//
+// This code is inserted after the automatically generated code.
+//
+//  Author: John Luke  <jluke@cfl.rr.com>
+//
+
+		public Label ()
+		{
+			Raw = gtk_label_new (null);
+		}
