@@ -16,6 +16,13 @@
 	* gtk/gtk-api.xml : regen
 	* sample/TestDnd.cs : update to new SelectionData API.
 
+2003-12-24  John Luke  <jluke@cfl.rr.com>
+
+	* gtk/Label.custom: add public default constructor
+	* gtk/gtk-api.xml:
+	* gtk/Gtk.metadata: make gtk_label_new_with_mnemonic the
+	preferred constructor, disable protected default ctor
+
 2003-12-21  John Luke  <jluke@cfl.rr.com>
 
 	* glib/Idle.cs: add Remove method found in Alp Toker's platano
